--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application
         android:name=".FirebaseDB"
         android:allowBackup="true"
-        android:icon="@mipmap/yzz_72"
+        android:icon="@mipmap/wurf"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
